# pytorch-cuda-devcontainer

./: .editorconfig  .mega-linter.yml  .pre-commit-config.yaml  .ruff.toml  .trivyignore  README.md  kics-config.yml  pyproject.toml  requirements-custom.txt  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: requirements-custom.txt  requirements.txt
.github/workflows/: mega-linter.yaml  test-python.yml
src/: check_cuda_is_available.py
test/: test_tensor.py
